--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   animate_do: ^4.2.0
   provider: ^6.1.4
-  assets_audio_player: 3.0.4+1
+  # assets_audio_player: 3.0.4+1
 
 
 dev_dependencies:
